Fix the vertical alignment of the options panel in the wiki grid

--- a/karl/views/static/ux2/plugins/popper-gridbox/karl.wikitoc.less
+++ b/karl/views/static/ux2/plugins/popper-gridbox/karl.wikitoc.less
@@ -13,6 +13,7 @@
 .karl-wikitoc-gridwrapper {
     width: 100%;
     height: @grid_height;
+    position: relative;
     .karl-wikitoc-widthconstrainer {
         width: 100%;
         height: @grid_height;
@@ -25,16 +26,13 @@
         width: 0px;
         height: 500px;
         position: absolute;
-        /*top: 0;*/
-        top: 122px;    /* why? */
+        top: 0;
         right: 0;
         z-index: 1111;
         overflow: hidden;
-        /* border: 1px solid #AAAAAA; */
         color: #222222;
         background-color: #d3d3d3; 
         font-weight: bold;
-
         font-size: 11px;
         line-height: 11px;
 
